# projekt-programowanie-obiektowe

ssrpg1.0/: CMakeLists.txt  ClickerRPG.pro  FINAL_NOTES.md  QT_CREATOR_INSTRUCTIONS.md  README.md  resources.qrc
ssrpg1.0/src/: App.tsx  enemy.cpp  enemy.h  gameData.ts  mainwindow.cpp  mainwindow.h  player.cpp  player.h  types.ts
